# monitoring-agent

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/agent/: data_collector.rs  logging.rs  mod.rs  multi_agent.rs  system_data.rs
src/monitoring/: alerts.rs
src/monitoring-frontend/: package-lock.json  package.json
src/monitoring-frontend/src/: App.css  App.tsx  metricsDisplay.tsx
src/security/: auth.rs
src/server/: endpoints.rs  mod.rs  websocket.rs
