[package]
name = "monitoring-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full", "macros"] }
futures = "0.3"
base64 = "0.21"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
sysinfo = "0.29"
itertools = "0.10"
jsonwebtoken = "8.1"
log4rs = "1.0"
rusqlite = "0.29.0"
num_cpus = "1.16.0"


[dev-dependencies]
mockall = "0.11"

# Adicione esta parte para definir a estrutura do projeto
[lib]
name = "monitoring_agent"
path = "src/lib.rs"

